# Health-Project

./: README.md  admin_report.xlsx  app.py  appointments.xlsx  doctor_schedule.xlsx  patients.csv  pyproject.toml  readme.md  requirements.txt
attached_assets/: Pasted-Build-a-complete-end-to-end-Python-project-for-a-Medical-Appointment-Scheduling-AI-Agent-using-t-1756988147077_1756988147078.txt
generated_pdfs/: appointment_summary_Swapnil_Singh_20250905.txt  intake_form_Swapnil_Singh_20250905.txt  intake_form_Swasti_Jain_20250905.txt
utils/: data_generator.py  email_service.py  excel_manager.py  patient_manager.py  pdf_generator.py  sms_service.py
