[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.6.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langgraph>=0.6.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "reportlab>=4.4.3",
    "streamlit>=1.49.1",
    "twilio>=9.8.0",
]
